# get-tennis-scores

./: .gitignore  LICENSE  MANIFEST.in  README.md  api_client.py  app.py  espn_client.py  get_tennis_scores.py  models.py  pyproject.toml  styles.tcss
.github/workflows/: publish.yaml
get_tennis_scores/: api_client.py  get_tennis_scores.py  models.py
